--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,48 @@ input, select {
     color: orange;
 }
 
+#toastNotification {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #2e3440;
+    color: #e5e9f0;
+    text-align: center;
+    border-radius: 0.2em;
+    border: 1px solid #e5e9f0;
+    padding: 0.5em;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 2em;
+}
+
+#toastNotification.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
 /* Phone styles */
 @media all and (max-width: 1000px) {
     #everything {
