--- a/styles.css
+++ b/styles.css
@@ -268,6 +268,10 @@ input, select, #toastNotification {
     padding: 0.5em;
 }
 
+#addMealDescription {
+    width: 100%;
+}
+
 #toastNotification.show {
     visibility: visible;
     -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
